--- a/angular.json
+++ b/angular.json
@@ -57,7 +57,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "usermanager-ang:build"
+            "browserTarget": "usermanager-ang:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
